<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:bootstrap="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/name" />

            <com.beardedhen.androidbootstrap.BootstrapEditText
                android:id="@+id/add_sprint_name_et"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:inputType="textAutoComplete"
                android:textColorHint="#cccccc"
                bootstrap:be_roundedCorners="true" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/description" />

            <com.beardedhen.androidbootstrap.BootstrapEditText
                android:id="@+id/add_sprint_desc_et"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:inputType="textAutoComplete"
                android:textColorHint="#cccccc"
                bootstrap:be_roundedCorners="true" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/description" />

            <com.beardedhen.androidbootstrap.BootstrapEditText
                android:id="@+id/add_sprint_pts_et"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:inputType="number"
                android:textColorHint="#cccccc"
                bootstrap:be_roundedCorners="true" />
        </LinearLayout>
    </LinearLayout>

    <com.beardedhen.androidbootstrap.BootstrapButton
        android:id="@+id/add_sprint_activity_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="4dp"
        android:padding="10dp"
        android:text="@string/add_sprint"
        bootstrap:bb_roundedCorners="true"
        bootstrap:bb_type="success" />
</RelativeLayout>